conky now don't show whole html page on error but only ipv4 adresses

--- a/.config/conky/conky.conf
+++ b/.config/conky/conky.conf
@@ -60,7 +60,7 @@ ${goto 50}${font Conky Icons by Carelli:size=14}Ɓ ${font}${goto 85}${downspeed 
 ${goto 50}${font Conky Icons by Carelli:size=14}Ƃ ${font}${goto 85}${upspeed wlp3s0}${goto 225}${upspeed enp7s0}
 ${goto 50}${font Conky Icons by Carelli:size=14}h ${font}${goto 85}${addrs wlp3s0}${goto 225}${addrs enp7s0}
 ${goto 50}${font Conky Icons by Carelli:size=14}Ǘ ${font}${goto 85}${wireless_essid wlp3s0} : ${wireless_link_qual wlp3s0}%
-${color #00ffff}${font Conky Icons by Carelli:size=14}i ${font}${exec curl -4 ifconfig.co}${color}
+${color #00ffff}${font Conky Icons by Carelli:size=14}i ${font}${exec curl -s -4 ifconfig.co | grep -E -o "([0-9]{1,3}[\.]){3}[0-9]{1,3}" }${color}
 
 ${color #00ffff}${font Conky Icons by Carelli:size=14}ň ${font}HDD${color}
 ${goto 50}${font Conky Icons by Carelli:size=14}ǘ ${font}${goto 85}sda: ${hddtemp} ºC sdb: ${hddtemp /dev/sda} ºC
