--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -1,6 +1,7 @@
 profile=gpu-hq
 alang=jpn,eng,fre
 slang=eng,fre
+sub-file-paths=sub:subs:subtitles
 #subshow=auto
 [mainpc]
 scale=ewa_lanczossharp
