--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -47,7 +47,6 @@ glx-copy-from-front = false;
 # Useless with --glx-use-copysubbuffermesa.
 # Partially breaks --resize-damage.
 # Defaults to undefined.
-glx-swap-method = "undefined";
 
 #################################
 #
@@ -189,7 +188,7 @@ refresh-rate = 0;
 # opengl-oml: Try to VSync with OML_sync_control OpenGL extension. Only work on some drivers.
 # opengl-swc: Try to VSync with SGI_swap_control OpenGL extension. Only work on some drivers. Works only with GLX backend. Known to be most effective on many drivers. Does not actually control paint timing, only buffer swap is affected, so it doesn’t have the effect of --sw-opti unlike other methods. Experimental.
 # (Note some VSync methods may not be enabled at compile time.)
-vsync = "none";
+vsync = false;
 #vsync = "opengl-swc";
 
 # Enable DBE painting mode, intended to use with VSync to (hopefully) eliminate tearing.
