--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -76,9 +76,9 @@ padding-right = 0
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=20;1
+font-0 = DejaVuSans:pixelsize=20;1
 ;font-1 = MaterialIcons:fontformat=truetype:size=8:antialias=false;0
-font-1 = WunconSiji:pixelsize=10;1
+font-1 = Siji:pixelsize=10;1
 font-2 = FontAwesome:pixelsize=14;0
 
 
