polybar fixed temperature

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -84,7 +84,7 @@ font-2 = FontAwesome:pixelsize=14;0
 
 modules-left = bspwm xwindow
 modules-center = battery
-modules-right = backlight filesystem mpd volume xkeyboard memory temperature1 cpu date
+modules-right = backlight filesystem mpd volume xkeyboard memory temperature cpu date
 
 tray-position = right
 tray-padding = 5
@@ -354,7 +354,7 @@ format-underline = #00ffff
 label = %date% %time%
 
 [module/volume]
-type = internal/volume
+type = internal/alsa
 format-volume = <label-volume> <bar-volume>
 label-volume = VOL
 label-volume-foreground = ${root.foreground}
@@ -382,7 +382,7 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [module/temperature]
 type = internal/temperature
-thermal-zone = 0
+thermal-zone = ${env:cpuid:0}
 warn-temperature = 60
 interval = 15
 format = <ramp> <label>
@@ -390,8 +390,8 @@ format-underline = #00ffff
 format-warn = <ramp> <label-warn>
 format-warn-underline = ${self.format-underline}
 
-label = %temperature%
-label-warn = %temperature%
+label = %temperature-c%
+label-warn = %temperature-c%
 label-warn-foreground = ${colors.secondary}
 
 ramp-0 = 
@@ -399,24 +399,6 @@ ramp-1 = 
 ramp-2 = 
 ramp-foreground = ${colors.foreground-alt}
 
-[module/temperature1]
-type = internal/temperature
-thermal-zone = 3
-warn-temperature = 60
-interval = 15
-format = <ramp> <label>
-format-underline = #00ffff
-format-warn = <ramp> <label-warn>
-format-warn-underline = ${self.format-underline}
-
-label = %temperature%
-label-warn = %temperature%
-label-warn-foreground = ${colors.secondary}
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
 [module/powermenu]
 type = custom/menu
 
