vim langserv and shel env edit

--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,14 +1,10 @@
 {
-  "languageserver": {
-    "ccls": {
-      "command": "ccls",
-      "filetypes": ["c", "cpp", "objc", "objcpp"],
-      "rootPatterns": [".ccls", "compile_commands.json", ".vim/", ".git/", ".hg/"],
-      "initializationOptions": {
-	"cache": {
-	  "directory": "/tmp/ccls"
+    "languageserver": {
+	"clangd": {
+	    "command": "clangd",
+	    "args": ["--background-index"],
+	    "rootPatterns": ["compile_flags.txt", "compile_commands.json", ".vim/", ".git/", ".hg/"],
+	    "filetypes": ["c", "cpp", "objc", "objcpp"]
 	}
-      }
     }
-  }
 }
